# libre-oneroster

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-sync  Makefile  README.md  compose.yml  entrypoint.sh  flake.nix
.forgejo/workflows/: nix.yaml
.gitea/workflows/: nix.yaml
db/: gradebooks.sql  init.sql  schema.sql
sample/: academicSessions.json  classes.json  courses.json  enrollments.json  orgs.json  periods.json  subjects.json  users.json
src/: client.rs  lib.rs  model.rs  server.rs
src/client/: sync.rs
src/client/sync/: isams.rs  wcbs_pass.rs
src/server/: auth.rs  db.rs  errors.rs  params.rs
src/server/auth/: credentials.rs  jwt.rs  middleware.rs
src/server/errors/: middleware.rs
